# Accesly-SmartContracts

./: .gitignore  Accesly_Context_v7_for_ClaudeCode.md  Accesly_RiskAcceptance_Scan6_Issue6.md  Cargo.toml
.cargo/: config.toml
contracts/blend-rule/: Cargo.toml
contracts/blend-rule/src/: contract.rs
contracts/blend-rule/test_snapshots/contract/tests/: enforce_amount_exceeded_fails.1.json  enforce_borrow_not_allowed_fails.1.json  enforce_invalid_function_fails.1.json  enforce_unauthorized_pool_fails.1.json  enforce_valid_supply_passes.1.json  enforce_wrong_from_fails.1.json  enforce_wrong_to_fails.1.json  install_stores_config.1.json  install_twice_fails.1.json  uninstall_removes_config.1.json
contracts/blend-vault/: Cargo.toml
contracts/blend-vault/src/: blend_client.rs  contract.rs  lib.rs  storage.rs  tests.rs
contracts/blend-vault/test_snapshots/tests/: deposit_mints_shares_and_supplies_blend.1.json  get_position_after_deposit_tracks_principal.1.json  get_position_no_deposit_returns_zeros.1.json  get_position_shows_yield_when_b_rate_increases.1.json  redeem_burns_shares_and_reduces_principal.1.json  total_assets_reads_blend_positions.1.json
contracts/blend-yield-policy/: Cargo.toml
contracts/blend-yield-policy/src/: contract.rs  lib.rs
contracts/blend-yield-policy/test_snapshots/contract/tests/: constructor_twice_fails.1.json  enforce_disabled_fails.1.json  enforce_no_yield_fails.1.json  enforce_period_not_elapsed_fails.1.json  enforce_unauthorized_fails.1.json  enforce_valid_passes.1.json  enforce_wrong_function_fails.1.json  enforce_wrong_recipients_fails.1.json  enforce_wrong_vault_fails.1.json  install_invalid_accesly_wallet_fails.1.json  install_success.1.json  install_twice_fails.1.json  ledgers_until_next_zero_on_first.1.json  uninstall_not_installed_fails.1.json  uninstall_success.1.json
contracts/ed25519-verifier/: Cargo.toml
contracts/ed25519-verifier/src/: contract.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: contract.rs  lib.rs
contracts/governance/test_snapshots/contract/tests/: cancel_removes_operation.1.json  check_auth_rejects_unscheduled_operation.1.json  constructor_sets_48h_delay.1.json  execute_after_delay_succeeds.1.json  execute_before_delay_fails.1.json  schedule_creates_pending_operation.1.json  unscheduled_operation_is_not_ready.1.json  update_delay_changes_min_delay.1.json
contracts/secp256r1-verifier/: Cargo.toml
contracts/secp256r1-verifier/src/: contract.rs
contracts/session-key/: Cargo.toml
contracts/session-key/src/: contract.rs  lib.rs
contracts/session-key/test_snapshots/contract/tests/: enforce_accumulates_spent_and_passes_within_limit.1.json  enforce_approve_always_forbidden.1.json  enforce_exceeds_amount_fails.1.json  enforce_expired_session_fails.1.json  enforce_negative_amount_fails.1.json  enforce_non_transfer_context_no_limit_passes.1.json  enforce_non_transfer_no_limit_passes.1.json  enforce_non_transfer_with_limit_rejected.1.json  enforce_transfer_from_always_forbidden.1.json  enforce_unauthorized_fails.1.json  enforce_valid_session_no_limit_passes.1.json  install_negative_max_amount_fails.1.json  (+9 more)
contracts/smart-account/: Cargo.toml
contracts/smart-account/src/: context_rules.rs  contract.rs  lib.rs  trustlines.rs
contracts/spending-limit/: Cargo.toml
contracts/spending-limit/src/: contract.rs
contracts/upgrade-rule/: Cargo.toml
contracts/upgrade-rule/src/: contract.rs  lib.rs
contracts/yield-distribution/: Cargo.toml
contracts/yield-distribution/src/: contract.rs  lib.rs
contracts/zk-email-verifier/: Cargo.toml
contracts/zk-email-verifier/src/: contract.rs  lib.rs
contracts/zk-email-verifier/test_snapshots/contract/tests/: revoke_key_returns_false_for_valid.1.json  set_multiple_keys_for_same_domain.1.json  unregistered_key_returns_false.1.json  verify_registered_key_returns_true.1.json  verify_returns_false_until_zk_integrated.1.json  verify_revoked_dkim_returns_false.1.json
scripts/: deploy_testnet.sh
(+36 files in other folders)
