[workspace]
resolver = "2"
members = ["contracts/*"]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
soroban-sdk    = "25.3.0"
ed25519-dalek  = "2.1.1"
p256           = { version = "0.13.2", features = ["ecdsa"] }
hex-literal    = "1.0.0"
stellar-accounts       = { path = "../oz-reference/packages/accounts",        version = "=0.7.1" }
stellar-contract-utils = { path = "../oz-reference/packages/contract-utils",  version = "=0.7.1" }
stellar-governance     = { path = "../oz-reference/packages/governance",       version = "=0.7.1" }
stellar-access         = { path = "../oz-reference/packages/access",           version = "=0.7.1" }
stellar-macros         = { path = "../oz-reference/packages/macros",           version = "=0.7.1" }
stellar-tokens         = { path = "../oz-reference/packages/tokens",           version = "=0.7.1" }
stellar-zk-email       = { path = "../oz-reference/packages/zk-email",         version = "=0.7.1" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
