[package]
name = "accesly-ed25519-verifier"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk      = { workspace = true }
stellar-accounts = { workspace = true }

[dev-dependencies]
soroban-sdk   = { workspace = true, features = ["testutils"] }
ed25519-dalek = { workspace = true }
