[package]
name = "accesly-governance"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk        = { workspace = true }
stellar-governance = { workspace = true }
stellar-access     = { workspace = true }
stellar-macros     = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
