[package]
name = "accesly-secp256r1-verifier"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk      = { workspace = true }
stellar-accounts = { workspace = true }

[dev-dependencies]
soroban-sdk  = { workspace = true, features = ["testutils"] }
p256         = { workspace = true }
hex-literal  = { workspace = true }
