[package]
name = "accesly-smart-account"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk            = { workspace = true }
stellar-accounts       = { workspace = true }
stellar-contract-utils = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
