[package]
name = "accesly-zk-email-verifier"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk      = { workspace = true }
stellar-accounts = { workspace = true }
stellar-zk-email = { workspace = true }
stellar-access   = { workspace = true }
stellar-macros   = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
